--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     //Navbar
     div.top
       Nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-        a(class="navbar-brand" href="#") Prob-Tracker
+        a(class="navbar-brand" href="#") #{title}
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
           ul(class="navbar-nav mr-auto")
             li(class="nav-item dropdown")
@@ -14,7 +14,7 @@ html
         div(class="pull-right")
           ul(class="navbar-nav mr-auto")
             li(class="nav-tem")
-              a(class="nav-link") + Add a new problem
+              a(class="nav-link") +  Add a new problem
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
