--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,8 @@ block content
             th(scope="col") Solution
             th(scope="col" width="7%") Count
             th(scope="col" width="7%") Add Count
+            th(scope="col" width="2%")
+              img(src="/images/trashcan.svg")
           tbody
     // /Problems
   // /Wrapper
