--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,5 +21,6 @@ html
   body
     block content
     script(src="/javascripts/bootstrap.js")
-    script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js")
+    script(src="https://code.jquery.com/jquery-3.4.1.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js")
+    script(src="/javascripts/global.js")
